--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fire.detect</groupId>
-    <artifactId>MyThird</artifactId>
+    <artifactId>DownLoadEmail</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>MyThird</name>
+    <name>DownLoadEmail</name>
     <description>Demo project for Spring Boot</description>
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -108,7 +108,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>third</finalName>
+        <finalName>downemail</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
